--- a/server/api/README.mdx
+++ b/server/api/README.mdx
@@ -1,6 +1,12 @@
 # Random Coffee API documentation
 
-> This page contains information about Random Coffee API usage
+### Советую всем, кто будет работать с API, установить программу Postman, в которой можно сразу же и проверить работу API
+
+[А по этой ссылке доступна свежая версия документации API](https://documenter.getpostman.com/view/7419944/S1Lx1ouZ)
+
+#
+#
+#
 
 - USERS
   - [GET all Users](#get-all-users)
